--- a/.github/workflows/android-workflow.yaml
+++ b/.github/workflows/android-workflow.yaml
@@ -14,3 +14,5 @@ jobs:
           java-version: 17
       - name: Print contents in current directory
         run: ls -la
+      - name: Unit test
+        run: ./gradlew testDebugUnitTest
