--- a/.github/workflows/android-workflow.yaml
+++ b/.github/workflows/android-workflow.yaml
@@ -4,7 +4,8 @@ on: [push]
 jobs:
   build-and-test:
     name: Build and run tests
-    runs-on: ubuntu-latest
+#    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout current repository in ubuntu's file system
         uses: actions/checkout@v1
@@ -14,5 +15,16 @@ jobs:
           java-version: 17
       - name: Print contents in current directory
         run: ls -la
-      - name: Unit test
+      - name: Run unit test
         run: ./gradlew testDebugUnitTest
+
+      - name: Run instrumentation tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 33
+          arch: x86
+          profile: Nexus 6
+          avd-name: test
+          emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim -camera-back none
+          disable-animation: true
+          script: ./gradlew connectedCheck
