--- a/.github/workflows/android-workflow.yaml
+++ b/.github/workflows/android-workflow.yaml
@@ -1,13 +1,12 @@
 name: CI Workflow
-on:
-  workflow_dispatch:
+#on:
+#  workflow_dispatch:
 
-#on: [push]
+on: [push]
 
 
 jobs:
   build-and-test:
-    
     name: Build and run tests
 #    runs-on: ubuntu-latest
     runs-on: macos-latest
