--- a/.github/workflows/android-workflow.yaml
+++ b/.github/workflows/android-workflow.yaml
@@ -11,12 +11,6 @@ jobs:
 #    runs-on: ubuntu-latest
     runs-on: macos-latest
     steps:
-      - name: Enable Debugging
-        if: always()
-        run: |
-          sudo mkdir -p /var/log/runner
-          sudo touch /var/log/runner/debug.log
-          sudo tail -f /var/log/runner/debug.log
       - name: Checkout current repository in ubuntu's file system
         uses: actions/checkout@v1
       - name: Setup JDK 17
@@ -27,28 +21,22 @@ jobs:
         run: ls -la
       - name: Run unit test
         run: ./gradlew testDebugUnitTest
-
-      - name: Run instrumentation tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 32
-          arch: x86
-          profile: Nexus 6
-          avd-name: test
-          emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim -camera-back none
-          disable-animations: true
-          script: ./gradlew connectedCheck
+#      - name: Run instrumentation tests
+#        uses: reactivecircus/android-emulator-runner@v2
+#        with:
+#          api-level: 32
+#          arch: x86
+#          profile: Nexus 6
+#          avd-name: test
+#          emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim -camera-back none
+#          disable-animations: true
+#          script: ./gradlew connectedCheck
       - name: Upload Reports
         uses: actions/upload-artifact@v1
         with:
           name: reports
           path: app/build/reports
-      - name: Enable Debugging
-        if: always()
-        run: |
-          sudo mkdir -p /var/log/runner
-          sudo touch /var/log/runner/debug.log
-          sudo tail -f /var/log/runner/debug.log
+
 
 
   generate-apk:
